--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "gos/web-socket-bundle": "^1.6"
+        "gos/web-socket-bundle": "^1.6",
+        "jms/serializer-bundle": "1.1.*",
+        "respect/validation": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
